# krisha-os

./: Cargo.toml  DEVLOG.md  README.md  build.rs  linker.ld  rust-toolchain.toml
.cargo/: config.toml  rust-toolchain.toml
.github/workflows/: lesson1.yml  lesson2.yml
builder/: Cargo.toml  build.rs
builder/src/: main.rs
docs/: CHEATSHEET.md  LESSONS.md
docs/lessons/: 01-freestanding.md  02-first-boot.md  03-vga-buffer.md  _template.md
kernel/: Cargo.toml
kernel/src/: main.rs  vga_buffer.rs
kernel/src/shell/: art.rs  commands.rs  mod.rs  parser.rs
kernel/src/time/: calendar.rs  fortune.rs  mod.rs
src/: main.rs
