[package]
name = "krisha-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Krisha OS Contributors"]
description = "The AI-native kernel of Krisha OS 🦚"

[dependencies]
bootloader = "0.9.23"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 60